# ai-news-aggregator

./: .gitignore  Dockerfile  README.md  check.md  deployment_strategy.md  future_upgrade.md  main.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: daily_aggregator.yml
app/: config.py  daily_runner.py  example.env  runner.py
app/agent/: cluster_agent.py  curator_agent.py  digest_agent.py  email_agent.py
app/database/: connection.py  create_tables.py  models.py  repository.py
app/profiles/: user_profile.py
app/scrapers/: anthropic.py  base.py  openai.py  youtube.py
app/services/: email.py  process_anthropic.py  process_clustering.py  process_curator.py  process_digest.py  process_email.py  process_youtube.py
docker/: docker-compose.yml
kubernetes/: README.md  configmap.yaml  cronjob.yaml  postgres-deployment.yaml
